fix scrollbar on dialog

--- a/src/app/scene/celestial-body-dialog/celestial-body-dialog.component.scss
+++ b/src/app/scene/celestial-body-dialog/celestial-body-dialog.component.scss
@@ -43,6 +43,7 @@
 mat-dialog-content {
   width: 100%;
   height: 100%;
+  max-height: 100%;
   padding-left: 0;
   padding-right: 0;
   margin: 0;
